--- a/sensei-core/pom.xml
+++ b/sensei-core/pom.xml
@@ -242,7 +242,7 @@
 			<groupId>com.browseengine.bobo</groupId>
 			<artifactId>bobo-browse</artifactId>
 
-			<version>3.1.1-SNAPSHOT</version>
+			<version>3.1.0</version>
 
 			<exclusions>
 				<exclusion>
