--- a/sensei-parent/pom.xml
+++ b/sensei-parent/pom.xml
@@ -167,6 +167,16 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+             <groupId>com.google.inject</groupId>
+		     <artifactId>guice</artifactId>
+		     <version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-multibindings</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
